--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwind.css";
+
+/* Add your own custom styles below this line */
