--- a/themes/pgov/layouts/partials/header.html
+++ b/themes/pgov/layouts/partials/header.html
@@ -78,9 +78,9 @@
       <nav class="hidden lg:flex lg:space-x-8 lg:py-2" aria-label="Global">
         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
         <a href="#" class="bg-gray-900 text-white inline-flex items-center rounded-md py-2 px-3 text-sm font-medium" aria-current="page">Featured</a>
-        <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white inline-flex items-center rounded-md py-2 px-3 text-sm font-medium">Explore</a>
+        <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white inline-flex items-center rounded-md py-2 px-3 text-sm font-medium">Discover</a>
         <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white inline-flex items-center rounded-md py-2 px-3 text-sm font-medium">Communities</a>
-        <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white inline-flex items-center rounded-md py-2 px-3 text-sm font-medium">Data</a>
+        <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white inline-flex items-center rounded-md py-2 px-3 text-sm font-medium">About</a>
       </nav>
     </div>
   
