add card components, goals data, and tag buttons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,3 +3,7 @@
 @import 'tailwindcss/utilities';
 
 /* Add your own custom styles below this line */
+
+.tag:hover { 
+    background-color: bg-sky-500;
+}
