Implement filter based on applied_tags field

--- a/themes/pgov/layouts/index.html
+++ b/themes/pgov/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
-  <p>{{ .Content }}</p>
+  <!-- <h1>{{ .Title }}</h1>
+  <p>{{ .Content }}</p> -->
   
   
   {{ partial "goals.html" . }}
