--- a/themes/pgov/layouts/partials/goals.html
+++ b/themes/pgov/layouts/partials/goals.html
@@ -1,24 +1,11 @@
 
-<!-- Filter tags
 <div class="flex justify-center pt-6 space-x-4">
-    <span class="hover:bg-sky-500 hover:text-white inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">Climate</span>
-    <span class="hover:bg-sky-500 hover:text-white inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">Racial equity</span>
-    <span class="hover:bg-sky-500 hover:text-white inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">Economy</span>
-    <span class="hover:bg-sky-500 hover:text-white inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">Healthcare</span>    
+    <span id="All" onClick="category_click(this.id)" class="hover:bg-sky-500 hover:text-white inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">All</span>
+    <span id="Climate" onClick="category_click(this.id)" class="hover:bg-sky-500 hover:text-white inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">Climate</span>
+    <span id="Equity" onClick="category_click(this.id)" class="hover:bg-sky-500 hover:text-white inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">Racial equity</span>
+    <span id="Economic development" onClick="category_click(this.id)" class="hover:bg-sky-500 hover:text-white inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">Economy</span>
+    <span id="Domestic health" onClick="category_click(this.id)" class="hover:bg-sky-500 hover:text-white inline-flex items-center rounded-md bg-gray-50 px-2 py-1 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10">Healthcare</span>    
 </div>
--->
-<br><br>
-<label for="category">Choose a category:</label>
-
-<select id="category" onchange="categoryChange()">
-  <option value="All" selected>All</option>
-  <option value="Climate">Climate</option>
-  <option value="Equity">Racial Equity</option>
-  <option value="Economic development">Economy</option>
-  <option value="Domestic health">Domestic Health</option>
-  <option value="Global health">Global Health</option>
-  <option value="Agriculture">Agriculture</option>
-</select>
 
 <!-- test values
 <pre id="output1"></pre>
@@ -43,9 +30,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>
 
-  function categoryChange() {
-      var category = document.getElementById("category").value;
-      const var1 = document.querySelectorAll("div[name*=" + CSS.escape(category) + "]");
+  function category_click(clicked_id) {
+      const var1 = document.querySelectorAll("div[name*=" + CSS.escape(clicked_id) + "]");
       //output1.textContent = `Selection count: ${var1.length}`;
       const var2 = document.querySelectorAll("div[name*=All]");
       //output2.textContent = `Selection count: ${var2.length}`;
