--- a/themes/pgov/layouts/partials/header.html
+++ b/themes/pgov/layouts/partials/header.html
@@ -12,7 +12,7 @@
   }
   ```
 -->
-<header class="bg-zinc-900">
+<header class="bg-sky-950">
     <div class="mx-auto max-w-7xl px-2 sm:px-4 lg:divide-y lg:divide-zinc-800 lg:px-8">
       <div class="relative flex h-16 justify-between">
         <div class="relative z-10 flex px-2 lg:px-0">
