--- a/themes/pgov/layouts/_default/baseof.html
+++ b/themes/pgov/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
     {{- partial "head.html" . -}}
     <body>
         {{- partial "header.html" . -}}
-        <div id="content">
+        <div id="content" style="background-color: #edeff0;">
         {{- block "main" . }}{{- end }}
         </div>
         {{- partial "footer.html" . -}}
