--- a/themes/pgov/layouts/partials/goals.html
+++ b/themes/pgov/layouts/partials/goals.html
@@ -1,10 +1,26 @@
-{{ $codes := dict "key" "value" }}
+{{ $logos := resources.Match "images/agencies/seals/*" }}
 
+{{ $codes := dict "key" "value" }}
 {{ range .Site.Data.codes }}
     {{ $codes = merge $codes (dict .Code .Name) }}
 {{ end }}
 
+<!-- Search bar -->
+<div class="relative z-0 flex flex-1 items-center justify-center px-2">
+  <div class="w-full max-w-6xl mt-6">
+    <label for="search" class="sr-only">Search</label>
+    <div class="relative">
+      <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
+        <svg class="h-5 w-5 text-zinc-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+          <path fill-rule="evenodd" d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z" clip-rule="evenodd" />
+        </svg>
+      </div>
+      <input id="search" name="search" class="block w-full rounded-full border-0 bg-slate-100 py-1.5 pl-10 pr-3 text-zinc-300 placeholder:text-zinc-400 focus:bg-white focus:text-zinc-900 focus:ring-0 focus:placeholder:text-zinc-500 sm:text-sm sm:leading-6" placeholder="Search" type="search">
+    </div>
+  </div>
+</div>
 
+<!-- Filter Tags -->
 <div class="flex justify-center pt-6 space-x-4">
     <button id="All" onClick="category_click(this.id)" class="tag w-16 justify-center text-center border border-sky-900 hover:bg-sky-900 hover:text-white inline-flex items-center rounded-full px-2 py-1 text-xs font-medium text-sky-950 ring-1 ring-inset ring-gray-500/10">All</button>
     <button id="Climate" onClick="category_click(this.id)" class="tag w-16 justify-center text-center border border-sky-900 hover:bg-sky-900 hover:text-white inline-flex items-center rounded-full bg-gray-50 px-2 py-1 text-xs font-medium text-sky-950 ring-1 ring-inset ring-gray-500/10">Climate</button>
@@ -13,49 +29,155 @@
     <button id="Domestic health, Global health, Medicare" onClick="category_click(this.id)" class="tag w-18 justify-center text-center border border-sky-900 hover:bg-sky-900 hover:text-white inline-flex items-center rounded-full bg-gray-50 px-2 py-1 text-xs font-medium text-sky-950 ring-1 ring-inset ring-gray-500/10">Healthcare</buttonn>    
 </div>
 
-<br><br>
-<p id="output">Showing 90 of 90 total results</p>
-
-<!-- style="background-color:#023059" -->
-<!-- Renders Card Partial -->
-<div id="all-cards" style="background-color: #fcfcfb;">
-    <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-16 lg:max-w-7xl lg:px-8">
+<!-- Card Component-->
+<div id="all-cards" style="background-color: #edeff0;">
+    <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-16 lg:max-w-7xl lg:px-8" >
+      <p id="output" class="text-right sans text-sm text-slate-600 font-medium">90 of 90 total results</p>
       <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:gap-x-8">
         {{ range .Site.Data.goals }}
           {{ if eq .goal_type "APG" }}
-              <div name="All, {{ .applied_tags }}">
+              <!-- <div class="bg-white cards rounded-2xl" > -->
                 {{ $goal_description_string := printf "%s" .goal_description }}
-                <!-- Renders card component -->
-                <a href="{{ .url_pgov_agency_12 }}">
-                  <div class="group relative">
-                    <div dir="ltr" style="border-left-width:3px;" class="border border-s-yellow-500 min-h-80 aspect-h-1 aspect-w-1 w-full overflow-hidden lg:aspect-none group-hover:opacity-75 lg:h-80">     
-                      <div class="flex justify-around ">
-                        <p style="color:#BF930F" class="font-semibold sans text-sm mx-6 my-4 inline-block">{{ index $codes .agency_code }}</p>                
-                          <span class="status inline-flex items-center gap-x-1.5 rounded-md bg-blue-100 px-2 py-1 text-xs font-medium text-blue-700 ms-8 my-4">
+                  <div class="group relative cards"  onClick="cardPopup()" name="All, {{ .applied_tags }}">
+                      <div dir="ltr" style="height:406px;" class="bg-white border border-slate-300 rounded-2xl min-h-80 aspect-h-1 aspect-w-1 w-full overflow-hidden lg:aspect-none group-hover:opacity-75">                           
+                        <div class="grid" style="grid-template-columns: 267px 190px;">                                                                   
+                          {{ if eq .goal_type "APG" }}
+                          <span style="width:fit-content; height:26px;" class="inline-flex items-center rounded-full bg-gray-50 px-1.5 py-0.5 text-xs font-medium text-gray-600 ring-1 ring-inset ring-gray-500/10 ms-6 my-4">2YRGoal</span>
+                          {{ end }}
+                          <span id="cardStatus" style="width:fit-content; height:26px; margin-left:0;" class="status inline-flex items-center gap-x-1.5 rounded-full bg-gray-100 px-2 py-1 text-xs font-medium text-gray-600 ms-8 my-4" data-value="{{ .goal_status }}">
                             <svg class="h-1.5 w-1.5 fill-blue-500" viewBox="0 0 6 6" aria-hidden="true"><circle cx="3" cy="3" r="3" /></svg>
                               {{ .goal_status }}
+                              <a href="{{ .url_pgov_agency_12 }}" id="hidden-goal-link"></a>
                           </span>
-                      </div>
-                      <p class="sans text-lg mx-6 my-4 font-normal text-sky-950">{{ .goal_name | truncate 70 }}</p> 
-                      {{ if ge (len $goal_description_string ) 175 }}
-                        <p class="sans text-base mx-6 my-4 text-sky-950">{{ .goal_description | truncate 175 }}</p>
-                      {{ else }}
-                        <p class="sans text-base mx-6 my-4 text-sky-950">{{ .goal_description }}</p>
-                      {{ end }}
-                    </div>
-                  </div>
-                </a>
-              </div>
+                        </div>    
+                        <p id="cardName"  class="sans text-lg ms-6 mx-4 my-2 font-bold" data-value="{{ .goal_name }}">{{ .goal_name | truncate 64 }}</p> 
+                        <p id="cardDescription" class="sans text-base mx-6 my-4 text-slate-900" data-value="{{ .goal_description }}">{{ .goal_description | truncate 165 }}</p>
+                        <hr style="width:88%; margin:auto;" class="border-slate-300"/>
+                        <div class="flex flex-row mx-6 mb-2 mt-3">
+                          <i class="fa-solid fa-people-group mr-2 mt-1"></i>
+                          <p class="sans text-base font-semibold mr-2">Leaders</p>
+                          <div class="flex -space-x-1 overflow-hidden ml-auto">
+                            <img class="inline-block h-6 w-6 rounded-full ring-2 ring-white" src="https://images.unsplash.com/photo-1491528323818-fdd1faba62cc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+                            <img class="inline-block h-6 w-6 rounded-full ring-2 ring-white" src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+                            <img class="inline-block h-6 w-6 rounded-full ring-2 ring-white" src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2.25&w=256&h=256&q=80" alt="">
+                            <img class="inline-block h-6 w-6 rounded-full ring-2 ring-white" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+                          </div>
+                        </div>
+                        <hr style="width:88%; margin:auto;" class="border-slate-300"/>
+                        <div class="flex flex-row mx-6 mt-3 mb-2">
+                          <i class="fa-regular fa-calendar mr-2 mt-1"></i>
+                          <p class="sans text-base font-semibold mr-3">Duration</p>
+                          <div class="flex -space-x-1 overflow-hidden ml-auto">
+                            {{ $startYrStr := printf "%s" .date_start_fy }}
+                            {{ $endYrStr := printf "%s" .date_end_fy }}
+                            {{ $shortStartYr := substr $startYrStr 2 }}
+                            {{ $shortEndYr := substr $endYrStr 2 }}
+                            <p class="sans text-base text-slate-900">FY{{ $shortStartYr }}-{{ $shortEndYr }}</p>                      
+                          </div>
+                        </div>
+                        <hr style="width:88%; margin:auto;" class="border-slate-300"/>
+                        <div class="flex flex-row mx-6 mt-3 mb-4">
+                          <i class="fa-solid fa-list-check mr-2 mt-1"></i>
+                          <p class="sans text-base font-semibold mr-2">Targets</p>
+                          <div class="flex -space-x-1 overflow-hidden ml-auto">
+                            <p class="sans text-base text-slate-900">Add text here</p>                      
+                          </div>
+                        </div>
+                      </div>    
+                      <div class="flex">  
+                          {{ $lowercaseOrg := lower .organization_abbreviation }}                                            
+                          {{ range $index, $logo := $logos }}  
+                            {{ $imgAlt := path.Base $logo.Name }}
+                            {{ $removeImgType := replaceRE `(\.[^.]+)$` "" $imgAlt }}     
+                              {{ if eq $removeImgType $lowercaseOrg }}                       
+                                  <img src="{{ $logo.Permalink }}" alt="{{ $removeImgType }}" style="width:37px; height:37px;" class="mx-2 my-3"/>                                                                         
+                              {{ end }}
+                            {{ end }}                       
+                        <p id="cardAgency" class="font-semibold sans text-base ml-1 my-4 inline-block text-slate-900">{{ index $codes .agency_code }}</p>                                       
+                        <p class="hidden hidden-abbr">{{ $lowercaseOrg }}</p>                   
+                            {{ $numbers := (slice 103 144 185 314 713 238 117) }}
+                            {{ $shuffled := shuffle $numbers }}
+                            {{ range $index, $number := $shuffled }}
+                              {{ if mod $index 7 | eq 0 }}
+                                <i class="fa-solid fa-eye mt-5 ml-auto mr-1"></i>
+                                <span class="my-4 mr-1">{{ index $shuffled $index }}</span>
+                              {{ end }}
+                            {{ end }}                    
+                      </div>                                    
+                  </div>                                                           
+              <!-- </div> -->          
           {{ end }}
         {{ end }}
       </div>
     </div>
 </div>
 
+<!-- Renders Overlay -->
+<div id="overlay" class="hidden">
+  <div class="relative z-10" role="dialog" aria-modal="true">
+    <div class="fixed inset-0 hidden bg-gray-500 bg-opacity-75 transition-opacity md:block"></div>
+    <div class="fixed inset-0 z-10 overflow-y-auto">
+      <div class="flex min-h-full items-stretch justify-center text-center md:items-center md:px-2 lg:px-4">
+        <div class="flex w-full transform text-left text-base transition md:my-8 md:max-w-2xl md:px-4 lg:max-w-6xl">
+          <div class="relative flex w-full items-center overflow-hidden bg-white px-4 pb-8 pt-14 shadow-2xl sm:px-6 sm:pt-8 md:p-6 lg:p-8">
+            <div class="absolute right-0 top-0 hidden pr-4 pt-4 sm:block">
+              <button type="button" id="closeOverlay" class="rounded-md bg-white text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+                <span class="sr-only">Close</span>
+                <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+              </button>
+            </div>
+            <div class="sm:flex sm:items-start">
+              <div class="mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left">
+                <p style="color:#BF930F" class="overlay-goal-agency text-base font-semibold sans my-4 inline-block"></p>
+                <span class="ml-4 overlay-goal-status status inline-flex items-center gap-x-1.5 rounded-md bg-blue-100 px-2 py-1 text-xs font-medium text-blue-700 my-4">
+                  <svg class="h-1.5 w-1.5 fill-blue-500" viewBox="0 0 6 6" aria-hidden="true"><circle cx="3" cy="3" r="3" /></svg>            
+                </span>
+                <h3 class="overlay-goal-name text-xl font-semibold leading-6 text-sky-950" id="modal-title"></h3>              
+                <div class="mt-2">
+                  <p class="overlay-goal-description text-base text-sky-950"></p>
+                </div>
+                <a href="" class="overlay-goal-button"><button type="button" class="float-right bg-sky-900 text-white hover:border hover:border-sky-900 hover:text-sky-900 mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:w-auto">Go to Goal Profile</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>
   
-  // Perform this function on tag filter click
+  const cards = document.querySelectorAll(".cards");
+  const goalAgency = document.querySelector(".overlay-goal-agency");
+  const goalName = document.querySelector(".overlay-goal-name");
+  const goalStatus = document.querySelector(".overlay-goal-status");
+  const goalDescription = document.querySelector(".overlay-goal-description");
+  const goalButton = document.querySelector(".overlay-goal-button");
+  const overlay = document.querySelector("#overlay");
+  const closeOverlay = document.querySelector("#closeOverlay");
+
+  closeOverlay.addEventListener("click", () => {
+    overlay.classList.toggle("hidden");
+  });
+
+  // Display goal details in overlay
+  cards.forEach((card) => {
+    card.addEventListener("click", () => {   
+      overlay.classList.toggle("hidden");
+      goalAgency.textContent = card.querySelector("#cardAgency").innerHTML;
+      goalName.textContent = card.querySelector("#cardName").getAttribute("data-value");
+      goalStatus.textContent = card.querySelector("#cardStatus").getAttribute("data-value");
+      goalDescription.textContent = card.querySelector("#cardDescription").getAttribute("data-value");
+      goalButton.href = card.querySelector("#hidden-goal-link").getAttribute("href");
+    })
+  })
+
+   // Perform this function on tag filter click
   function category_click(clicked_id) {
     category_hide_all();
     category_show_clicked(clicked_id);
@@ -82,6 +204,7 @@
 
   // Show all cards with a tag that was selected
   function category_show_clicked(clicked_id) {
+    console.log(clicked_id, "id");
     // Split IDs into array
     const myArray = clicked_id.split(",");
 
@@ -118,23 +241,17 @@
     }) 
 
     // Output results
-    document.getElementById("output").innerHTML = `Showing ${counter} of ${total} total results`;
+    document.getElementById("output").innerHTML = `${counter} of ${total} total results`;
   }
 
   // Set goal status designs
   const statuses = document.querySelectorAll(".status");
   statuses.forEach((item) => {
     if(item.innerText === "On Track") {
-      item.style.backgroundColor = "rgb(220 252 231)";
-      item.style.color ="rgb(21 128 61)";
       item.querySelector("svg").style.fill = "rgb(34 197 94)";
     } else if (item.innerText === "Unavailable") {
-      item.style.backgroundColor = "rgb(243 244 246)";
-      item.style.color ="rgb(75 85 99)";
       item.querySelector("svg").style.fill = "rgb(156 163 175)";
     } else if (item.innerText === "Delayed" || item.innerText === "Blocked") {
-      item.style.backgroundColor = "rgb(254 226 226)";
-      item.style.color ="rgb(185 28 28)";
       item.querySelector("svg").style.fill = "rgb(239 68 68)";
     }
   }) 
