--- a/themes/pgov/layouts/partials/goals.html
+++ b/themes/pgov/layouts/partials/goals.html
@@ -8,7 +8,7 @@
 
 <!-- Intro text -->
 <div class="flex justify-center">
-    <div class="w-9/12">
+    <div>
       <h1 class="text-2xl font-bold ml-5 mt-5" style="font-family: 'Public Sans', sans-serif;">Performance.gov Goals</h1>
       <p class="text-base ml-5 mt-3" style="font-family: 'Public Sans', sans-serif;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
         Ut enim ad minim veniam</p>
@@ -106,7 +106,7 @@
 <hr style="margin-top:30px">
 
 <!-- Filter Tags -->
-<div class="flex relative pt-8 space-x-4" style="top:35px;left:203px;">
+<div class="flex pt-8 space-x-4 lg:max-w-7xl relative" style="margin-right:auto; margin-left:auto;top:30px;left:30px;">
   <p class="font-bold text-sm pt-1" style="font-family: 'Public Sans', sans-serif;">Featured Topics</p>
   <i class="fa-solid fa-circle-info" style="margin-top: 5px; margin-left: 10px;"></i>
     <button id="All" onClick="category_click(this.id)" class="tag w-16 justify-center text-center border border-gray-800 hover:bg-gray-800 hover:text-white inline-flex items-center rounded-full px-2 py-1 text-xs font-medium text-gray-800 ring-1 ring-inset ring-gray-500/10">All</button>
