--- a/themes/pgov/layouts/partials/goals.html
+++ b/themes/pgov/layouts/partials/goals.html
@@ -242,11 +242,13 @@
                             {{ end}}
                         </div>
                         <div style="top:10px" class="relative w-full items-center bg-white px-4 pb-8 pt-14 sm:px-6 sm:pt-8 md:p-6 lg:p-8">
+                          <!-- Close Overlay Button -->
                           <div class="absolute hidden pt-2 sm:block" style="top:-63px; right:-46px;">
                               <button type="button" id="closeOverlay" class="rounded-full bg-slate-700 hover:bg-white hover:text-slate-700 text-white hover:text-black" style="font-weight:700;opacity:100%;font-size:17px; width:40px;height:40px;opacity:80%">
                                 X
                               </button>
                           </div>
+                          <!-- Goal Leader Icons Right-Side Panel -->
                           <div class="sm:flex sm:items-start">
                               <div class="mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left">                     
                                   <a href="" target="_blank" class="overlay-goal-button">
@@ -270,6 +272,7 @@
                                   </div>
                               </div>     
                           </div>
+                          <!-- Target Cards -->
                           <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:gap-x-8">
                               {{ $targets := getJSON "/data/target.json" }}
                               {{ range $matchingData := where $targets ".related_goal_id" "in" $goal.goal_id }}
